# allelix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
allelix/: __init__.py  cli.py  compare.py  config.py  models.py
allelix/annotators/: __init__.py  _versions.py  alphamissense.py  base.py  cadd.py  clinvar.py  gnomad.py  gwas.py  pharmgkb.py  snpedia.py
allelix/data/: __init__.py  high_value_snps.yaml
allelix/databases/: __init__.py  _versions.py  alphamissense_loader.py  cadd_loader.py  cpic_loader.py  gnomad_loader.py  gwas_loader.py  loader_utils.py  manager.py  pharmgkb_loader.py  schema.py  snpedia_loader.py  snpedia_parser.py
allelix/exporters/: __init__.py  plink.py
allelix/parsers/: __init__.py  _helpers.py  ancestrydna.py  base.py  ftdna.py  livingdna.py  myhappygenes.py  myheritage.py  twentythreeandme.py
allelix/reports/: __init__.py  _pipeline.py  diff.py  high_value.py  html.py  json_report.py  methylation.py  terminal.py
allelix/utils/: __init__.py  allele.py  build_detect.py
docs/: grch36-liftover.md
docs/adr/: 0001-record-architecture-decisions.md  0002-plugin-based-parsers-and-annotators.md  0003-source-attributed-annotations.md  0004-offline-first-with-runtime-data-downloads.md  0005-snp-count-is-parse-derived.md  0006-database-cache-location.md  0007-genotype-matching-requires-alt-allele.md  0008-magnitude-scoring-from-clinsig.md  0009-pharmgkb-genotype-matching.md  0010-strand-handling-and-liftover.md  0011-indel-anchor-protection-for-array-parsers.md  0012-freshness-detection-via-remote-signal.md  0013-pharmgkb-non-finding-suppression.md  0014-somatic-variant-suppression-on-germline.md  0015-mock-data-as-spec.md  0016-data-classification-principle.md  0017-pharmgkb-snv-prose-fallback.md  README.md  (+16 more)
examples/: README.md  regenerate.sh
scripts/: build_alphamissense_cache.py  build_cadd_cache.py  build_gnomad_cache.py  check_version_tag.sh  extract_array_manifest.py  fetch_testdata.sh  parse_snpedia.py  run-tests.sh  scrape_snpedia.py  subset_for_demo.py  tag-release.sh
test_data/: FULL_TEST_PROTOCOL.md  README.md
tests/: conftest.py  generate_clinvar_fixture.py  generate_mock_data.py  generate_pharmgkb_fixture.py  test_cli.py  test_cli_helpers.py  test_compare.py  test_config.py  test_end_to_end.py  test_mock_data_invariants.py  test_models.py  test_registry.py  test_version.py
(+64 files in other folders)
